# mm

./: .gitignore  AGENTS.md  README.md  bun.lockb  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
._vscode/: settings.json
.claude/: CLAUDE.md
.claude/agents/: codebase-explorer.md  implementer.md  orchestrator.md  refactorer.md  reviewer-documenter.md  test-writer.md  web-researcher.md
.cursor/: environment.json  mcp.json
.cursor/rules/: deep-search.mdc  perplexity-research.mdc  project.mdc
.docs/: GithubPR.css
.github/: COPILOT_SETUP.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md
.github/workflows/: db-contracts.yml
.husky/: pre-commit  pre-push
apps-trading/write-node/: README.md  package.json
apps/auth/: bun.lockb  package.json  tsconfig.json
apps/backtest-python/: .gitignore  AGENTS.md  README.md  package.json  pyproject.toml
apps/backtest-python/src/backtest/: __init__.py  cli.py  config.py
apps/backtest-python/src/backtest/backtest/: __init__.py
apps/backtest-python/src/backtest/db/: __init__.py  candles.py  connection.py
apps/backtest-python/src/backtest/features/: __init__.py  rsi.py
apps/backtest-python/src/backtest/models/: __init__.py
apps/backtest-python/src/backtest_python/: __init__.py  __main__.py  contracts.py  jobs.py  runtime.py  sma.py  sql_contracts.py  verify_contracts.py
apps/backtest-python/tests/: test_contracts.py  test_rsi.py  test_sma.py
scripts/: check-postgres-client-version.sh  cloud-agent-install.sh  cloud-agent-start.sh  doppler-sync-env.sh  fetch-infisical.mjs  install-android-sdk.sh
(+639 files in other folders)
