[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "backtest-python"
version = "0.1.0"
description = "Python backtesting jobs backed by db-timescale contracts"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["psycopg[binary]"]

[tool.setuptools.packages.find]
where = ["src"]
